# vcapp

./: .env  Cargo.toml  config.yaml  package.json  pnpm-lock.yaml
.github/workflows/: general.yml
.sqlx/: query-6d70ec8019f2bfc9166c9625713807767c798e4d24532198d94ba9c347c5e284.json
.tests/: app_test.rs
assets/: main.css
migrations/: 20231215182313_create_users_table.sql
scripts/: init_db.sh
src/: config.rs  errors.rs  init.rs  lib.rs  main.rs
src/models/: user.rs
src/routes/: auth.rs  handler_404.rs  health_check.rs  hello_template.rs  mod.rs
src/utils/: password.rs
src/validation/: mod.rs  user_validation.rs
templates/: hello.html
tests/: app_test.rs
