[package]
name = "vcapp"
version = "0.1.0"
authors = ["Malibongwe Gumede <malib2027@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "vcapp"

[dependencies]
axum = "0.7.2"
tokio = { version = "1.35.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
