[package]
name = "vcapp"
version = "0.1.0"
authors = ["Malibongwe Gumede <malib2027@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "vcapp"

[dependencies]
axum = "0.7.2"
tokio = { version = "1.35.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http-body-util = "0.1.0"
sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "any",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
serde = "1.0.193"
config = "0.13.4"
askama = "0.12.1"
tower = { version = "0.4", features = ["util"] }
uuid = { version = "1.6.1", features = ["v4"] }
